force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/CSQ_DTT_How_punctual_was_the_counsellor__c.field-meta.xml
<CustomField>
    <fullName>CSQ_DTT_How_punctual_was_the_counsellor__c</fullName>
    <inlineHelpText>How punctual was the counsellor in starting the sessions?</inlineHelpText>
    <label>3. How punctual was the counsellor in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CSQ_Scores</valueSetName>
    </valueSet>
</CustomField>