force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_any_comments_about_your_Org__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_any_comments_about_your_Org__c</fullName>
    <inlineHelpText>If you have any comments about your Organisation or Department that you would like us to feedback anonymously, please comment below.</inlineHelpText>
    <label>If you have any comments about your Org</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>