force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_Case__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Client Satisfaction Questionnaires</relationshipLabel>
    <relationshipName>Customer_Satisfaction_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>