force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_Contact_Method__c</fullName>
    <label>Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>WAW_CSQ_Willing_to_be_contacted__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>