force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_Contract_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Customer_Satisfaction_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>