force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_Date__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>