force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_DTT_Are_you_back_at_work__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_DTT_Are_you_back_at_work__c</fullName>
    <inlineHelpText>Are you back at work now?</inlineHelpText>
    <label>11. Are you back at work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CSQ_Yes_No</valueSetName>
    </valueSet>
</CustomField>