force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_DTT_How_are_you_coping_overall__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_DTT_How_are_you_coping_overall__c</fullName>
    <inlineHelpText>How are you coping overall since you have had counselling?</inlineHelpText>
    <label>8. How are you coping overall</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CSQ_Scores</valueSetName>
    </valueSet>
</CustomField>