force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_DTT_If_you_have_any_comments__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_DTT_If_you_have_any_comments__c</fullName>
    <inlineHelpText>If you have any comments about your Organisation or Department that you would like us to feedback anonymously, please use the space below.</inlineHelpText>
    <label>If you have any comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>