force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_DTT_If_you_needed_to__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_DTT_If_you_needed_to__c</fullName>
    <inlineHelpText>If you needed to, would you use this counselling service again?</inlineHelpText>
    <label>14. If you needed to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CSQ_Yes_No</valueSetName>
    </valueSet>
</CustomField>