force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_DTT_Please_let_us_know_if__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_DTT_Please_let_us_know_if__c</fullName>
    <inlineHelpText>Please let us know if you have any further comments or suggestions about the counselling service.</inlineHelpText>
    <label>Please let us know if you</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>