force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_How_satisfactory_was_initial__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_How_satisfactory_was_initial__c</fullName>
    <inlineHelpText>How satisfactory was your initial telephone contact with Insight Wellbeing at Work?</inlineHelpText>
    <label>1. How satisfactory was your initial tel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CSQ_Scores</valueSetName>
    </valueSet>
</CustomField>