force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_IP_Are_you_now_back_at_work__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_IP_Are_you_now_back_at_work__c</fullName>
    <inlineHelpText>Are you now back at work?</inlineHelpText>
    <label>13. Are you now back at work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CSQ_Yes_No</valueSetName>
    </valueSet>
</CustomField>