force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_IP_Do_you_think_that_counselling__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_IP_Do_you_think_that_counselling__c</fullName>
    <inlineHelpText>Do you think that counselling has helped you improve how you function at work?</inlineHelpText>
    <label>9. Do you think that counselling has</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CSQ_Scores</valueSetName>
    </valueSet>
</CustomField>