force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_IP_Do_you_think_you_would_have__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_IP_Do_you_think_you_would_have__c</fullName>
    <inlineHelpText>Do you think you would have had to take time off work due to your difficulties if you had not been able to access the counselling service?</inlineHelpText>
    <label>15. Do you think you would have</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CSQ_Yes_No</valueSetName>
    </valueSet>
</CustomField>