force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_IP_How_convenient_was_location__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_IP_How_convenient_was_location__c</fullName>
    <inlineHelpText>How convenient was the location of the counselling venue for you?</inlineHelpText>
    <label>3. How convenient was the location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CSQ_Scores</valueSetName>
    </valueSet>
</CustomField>