force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_IP_How_helpful_have_you_found__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_IP_How_helpful_have_you_found__c</fullName>
    <inlineHelpText>How helpful have you found the counselling in managing your problems?</inlineHelpText>
    <label>7. How helpful have you found the</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CSQ_Scores</valueSetName>
    </valueSet>
</CustomField>