force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_IP_To_what_extent_do_you_feel__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_IP_To_what_extent_do_you_feel__c</fullName>
    <inlineHelpText>To what extent do you feel the counsellor was concerned to help you?</inlineHelpText>
    <label>6. To what extent do you feel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CSQ_Scores</valueSetName>
    </valueSet>
</CustomField>