force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_IP_Were_you_off_work_when_you__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_IP_Were_you_off_work_when_you__c</fullName>
    <inlineHelpText>Were you off work when you first contacted Insight Wellbeing at Work?</inlineHelpText>
    <label>12. Were you off work when you</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CSQ_Yes_No</valueSetName>
    </valueSet>
</CustomField>