force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_IP_What_did_you_think_of_the_ove__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_IP_What_did_you_think_of_the_ove__c</fullName>
    <inlineHelpText>What did you think of the overall service from Insight Wellbeing at Work?</inlineHelpText>
    <label>11. What did you think of the overall</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CSQ_Scores</valueSetName>
    </valueSet>
</CustomField>