force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/fields/WAW_CSQ_Please_let_us_know_if_you_have__c.field-meta.xml
<CustomField>
    <fullName>WAW_CSQ_Please_let_us_know_if_you_have__c</fullName>
    <inlineHelpText>Please let us know if you have any further comments or suggestions about the counselling service</inlineHelpText>
    <label>Please let us know if you have any</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>