force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/recordTypes/CSQ_Digital_Therapy.recordType-meta.xml
<RecordType>
    <fullName>CSQ_Digital_Therapy</fullName>
    <active>true</active>
    <label>CSQ - Digital Therapy</label>
</RecordType>