force-app-metadata-removed/main/default/objects/Client_Satisfaction_Questionnaire__c/recordTypes/CSQ_In_Person_Therapy.recordType-meta.xml
<RecordType>
    <fullName>CSQ_In_Person_Therapy</fullName>
    <active>true</active>
    <label>CSQ - In Person Therapy</label>
</RecordType>